--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
   
   Aulas de Direito Digital:
   
-- Aula 1: [Segurança Cibernética](https://ndtj.github.io/direitoDigital/ciber.html)
+- Aula 1: [Segurança Cibernética](https://ndtj.github.io/direitoDigital/slides/ciber.html)
 
-- Aula 2: [LGPD Artigo 1º](https://ndtj.github.io/direitoDigital/lgpd1.html)
+- Aula 2: [LGPD Artigo 1º](https://ndtj.github.io/direitoDigital/slides/lgpd1.html)
 
