Doc: LGPD 2 ajuste fino

--- a/README.Rmd
+++ b/README.Rmd
@@ -22,3 +22,5 @@ knitr::opts_chunk$set(
 
 - Aula 2: [LGPD Artigo 1º](https://ndtj.github.io/direitoDigital/slides/lgpd1.html)
 
+- Aula 2: [LGPD Artigos 2 a 5](https://ndtj.github.io/direitoDigital/slides/lgpd2.html)
+
