--- a/README.Rmd
+++ b/README.Rmd
@@ -26,7 +26,9 @@ knitr::opts_chunk$set(
 
 - Aula 4: [LGPD Artigo 7 a 10:  ](https://ndtj.github.io/direitoDigital/slides/lgpd4.html)
 
-
 - Aula 6: [LGPD Artigo 15 a 41:  ](https://ndtj.github.io/direitoDigital/slides/lgpd6.html)
+
+
+- Aula 7: [Engenharia de prompt:  ](https://ndtj.github.io/direitoDigital/slides/tutorial_prompt.html)
 
 
