--- a/README.Rmd
+++ b/README.Rmd
@@ -31,4 +31,6 @@ knitr::opts_chunk$set(
 
 - Aula 7: [Engenharia de prompt:  ](https://ndtj.github.io/direitoDigital/slides/tutorial_prompt.html)
 
+- Aula 8: [Crimes digitais:  ](https://ndtj.github.io/direitoDigital/slides/crimes_digitais.html)
+
 
